# tsfm-peft-bench

./: .gitignore  LICENSE  README.md  neurips_checklist.tex  paper_appendix.tex  paper_submission.tex  paper_supplementary.tex  pyproject.toml  references.bib  requirements-lock.txt  requirements.txt  tsfm_peft_bench.croissant.json
configs/: config.yaml
configs/adaptation/: adapter.yaml  dora.yaml  full_ft.yaml  head.yaml  lora.yaml  prefix.yaml  zero_shot.yaml
configs/model/: chronos.yaml  moirai.yaml  moment.yaml  timesfm.yaml
results/: paper_manifest.json  paper_numbers.json  paper_numbers.tex  selector_evaluation.json  selector_per_cell_detail.json  selector_table.tex
results/expansion_analysis_canonical/: anova_primary_main_kept.json
results/expansion_analysis_v2/: domain_shift_profiles.json
scripts/: analyze_cka_trajectories.py  analyze_expansion.py  analyze_expansion_v2.py  analyze_pilot.py  analyze_shift_sensitivity.py  backfill_phase1a_corrupt.py  backfill_phase1b_missing.py  backfill_phase1b_missing_others.py  backfill_phase1b_moirai_remaining.py  backfill_phase1b_one.py  build_selector.py  build_shift_policy.py  characterize_domains.py  cluster_dispatch.py  compute_fim_fingerprints.py  compute_robustness.py  evaluate.py  fim_selector.py  frequency_rank_hypothesis.py  generate_neurips_figures.py  generate_paper_figures.py  generate_pivot_run_manifest.py  gpu_queue.sh  gradient_probe.py  pilot_phase1a.py  pilot_phase1b.py  plot_gradient_analysis.py  plot_spectral_rank.py  plot_supplementary_figures.py  prepare_physionet2012.py  reproduce_paper_tables.py  run_all_phases.sh  run_benchmark.sh  run_cka_probe.sh  run_cka_trajectory.py  run_expansion.py  run_mechanism_analysis.sh  subspace_probe.py  subspace_probe_plan.py  train.py
src/adaptation/: adapter.py  head.py  lora.py  prefix.py
src/evaluation/: cka.py  fim_fingerprint.py  metrics.py
src/models/: __init__.py  chronos.py  moirai.py  moment.py  timesfm_wrapper.py
src/utils/: device.py  (+2 more)
tests/: test_adaptation.py  test_analysis.py  test_data.py  test_evaluation.py  test_new_data_loaders.py  test_utils.py
