[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsfm-peft-audit"
version = "0.1.0"
description = "Cross-architecture empirical audit of PEFT in time series foundation models."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Anonymous (under review)" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.37.0",
    "peft>=0.8.0",
    "accelerate>=0.25.0",
    "datasets>=2.16.0",
    "gluonts>=0.14.0",
    "neuralforecast>=1.7.0",
    "wandb>=0.16.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "scikit-posthocs>=0.9.0",
    "pingouin>=0.5.3",
    "statsmodels>=0.14.0",
    "ruptures>=1.1.9",
    "torch-cka>=0.2.0",
    "numpy>=1.24.0,<2.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "tqdm>=4.65.0",
    # TSFM model packages — required for paper experiments.
    # Versions pinned to match the lock used for the released results;
    # pin precisely with `pip install -r requirements-lock.txt` for full reproduction.
    "chronos-forecasting>=2.2.2",
    "momentfm>=0.1.5",
    "uni2ts>=2.0.0",  # Moirai
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
]
# TimesFM is optional because it conflicts with Python 3.12 (lingvo/paxml).
# Install with `pip install -e ".[timesfm]"` only on Python 3.10/3.11.
timesfm = [
    "timesfm>=1.2.0",
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "scripts*", "results*", "data*", "configs*", "notebooks*"]
